--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,6 @@
 body{
   margin: 0;
+  padding: 0;
   font-family: 'ABeeZee', sans-serif;
   font-weight: 100;
   background-color:  #FFF2F1;
@@ -38,6 +39,114 @@ body{
   font-weight: 500;
 }
 
+.slider{
+  margin: 0 auto;
+  width: 100%;
+  height: 400px;
+  overflow:hidden;
+}
+
+.slides{
+  width: 400%;
+  height: 400px;
+  display: flex;
+}
+
+.slides input{
+  display: none;
+}
+
+.slide{
+  width: 25%;
+  position:relative;
+}
+
+.slide img{
+ width: 100%;
+}
+
+.manual-navigation{
+  position: absolute;
+  width: 100%;
+  margin-top: 330px;
+  display: flex;
+  justify-content:center;
+}
+
+.manual-btn{
+  border: 2px solid #fff;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 1s;
+}
+
+.manual-btn:not(:last-child){
+  margin-right: 40px;
+}
+
+.manual-btn:hover{
+  background-color: #fff;
+}
+
+#radio1:checked ~.first{
+  margin-left: 0;
+}
+
+#radio2:checked ~.first{
+  margin-left: -25%;
+}
+
+#radio3:checked ~.first{
+  margin-left: -50%;
+}
+
+#radio4:checked ~.first{
+  margin-left: -75%;
+}
+
+.navigation-auto{
+  position: absolute;
+  width: 800px;
+  margin-top: 360px;
+  display: flex;
+  justify-content: center;
+}
+
+.navigation-auto div{
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 1s;
+} 
+
+.manual-btn{
+  border: 2px solid #fff;
+  padding: 5px;
+  border-radius: 10px;
+  cursor:pointer;
+
+}
+
+.navigation-auto div:not(last-child){
+  margin-right: 50px;
+}
+
+#radio1:checked~ .navigation-auto .auto-btn1{
+background-color: #fff;
+}
+
+#radio2:checked~ .navigation-auto .auto-btn2{
+  background-color: #fff;
+}
+
+#radio3:checked~ .navigation-auto .auto-btn3{
+  background-color: #fff;
+}
+
+#radio4:checked~ .navigation-auto .auto-btn4{
+  background-color: #fff;
+}
 
 h1 {
   color: #4F2819;
