--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,7 @@ body{
   justify-content: space-between;
   align-items: center;
   max-height: 100px;
+  position: sticky;
 }
 
 .logo img {
@@ -39,113 +40,133 @@ body{
   font-weight: 500;
 }
 
-.slider{
+ .slider{
   margin: 0 auto;
+  position: relative;
   width: 100%;
   height: 400px;
   overflow:hidden;
+  width: 100%;
+  display: flex;
+  justify-content:center;
 }
 
 .slides{
-  width: 400%;
+  width: 100%;
   height: 400px;
   display: flex;
-}
+  transition: transform 0.5s ease-in-out;
 
-.slides input{
-  display: none;
-}
-
-.slide{
-  width: 25%;
-  position:relative;
 }
 
 .slide img{
  width: 100%;
 }
 
-.manual-navigation{
-  position: absolute;
-  width: 100%;
-  margin-top: 330px;
-  display: flex;
-  justify-content:center;
+.slide {
+  min-width: 100%;
+  box-sizing: border-box;
+  transition: opacity 0.5s;
 }
 
-.manual-btn{
-  border: 2px solid #fff;
-  padding: 5px;
-  border-radius: 10px;
+button.prev, button.next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: transparent;
+  color: #FFBBB5;
+  border: none;
+  font-size: 4rem;
+  padding: 0.5rem 1rem;
   cursor: pointer;
-  transition: 1s;
+  z-index: 10;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* sombra */
+  /*-webkit-text-stroke: 1px rgb(255, 253, 253) borda na seta */
 }
 
-.manual-btn:not(:last-child){
-  margin-right: 40px;
+button.prev { left: 10px; }
+button.next { right: 10px; }
+
+.texto-apresentacao {
+  margin: 0 auto;
+  padding: 0;
+  line-height: 1.8; 
 }
 
-.manual-btn:hover{
-  background-color: #fff;
+.texto-apresentacao h2 {
+  margin: 0 auto;
+  padding: 0; 
+  color: #4f2819;
+}
+.texto-apresentacao p {
+  padding: 0 40px;
+  top:0;
 }
 
-#radio1:checked ~.first{
-  margin-left: 0;
+.mais-vendidos {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 2rem 1rem;
+  text-align: center;
 }
 
-#radio2:checked ~.first{
-  margin-left: -25%;
+.mais-vendidos h1 {
+  margin: 0 auto;
+  padding: 0; 
+  color: #4f2819;
 }
 
-#radio3:checked ~.first{
-  margin-left: -50%;
+.produtos-grid {
+  display:flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  object-fit:contain;
+  padding: 0 1rem;
 }
 
-#radio4:checked ~.first{
-  margin-left: -75%;
+.produto {
+  width: 300px;
+  height: 300px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 5px;
+  box-shadow: 20px 20px 20px rgba(0,0,0,0.1);
+  cursor: pointer;
 }
 
-.navigation-auto{
-  position: absolute;
-  width: 800px;
-  margin-top: 360px;
+.produto img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   display: flex;
   justify-content: center;
+  transition: transform 0.6s ease;
 }
 
-.navigation-auto div{
-  padding: 5px;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: 1s;
-} 
-
-.manual-btn{
-  border: 2px solid #fff;
-  padding: 5px;
-  border-radius: 10px;
-  cursor:pointer;
-
+.produto:hover img {
+  transform: scale(1.05);
 }
 
-.navigation-auto div:not(last-child){
-  margin-right: 50px;
+.produto figcaption {
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.6);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 1rem;
 }
 
-#radio1:checked~ .navigation-auto .auto-btn1{
-background-color: #fff;
+.produto h3 {
+  font-size: 1.2rem;
+  margin: 0.5rem 0;
 }
 
-#radio2:checked~ .navigation-auto .auto-btn2{
-  background-color: #fff;
-}
-
-#radio3:checked~ .navigation-auto .auto-btn3{
-  background-color: #fff;
-}
-
-#radio4:checked~ .navigation-auto .auto-btn4{
-  background-color: #fff;
+.produto p {
+  font-size: 0.95rem;
 }
 
 h1 {
@@ -211,8 +232,6 @@ th{
 
 }
 
-
-
 footer {
   background-color: #4F2819;
   color: white;
@@ -224,18 +243,23 @@ footer {
 .footer-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   gap: 20px;
+  padding: 20px;
   align-items: center;
+  flex: 1 1 200px;
+  min-width: 200px;
 }
 
 .footer-logo img {
   width: 160px;
   height: auto;
+  max-width: 150px;
 }
 
 .footer-section, .footer-location {
   max-width: 250px;
+  pad: 0;
 }
 
 .footer-section h4,
@@ -268,9 +292,9 @@ footer {
 .footer-social img {
   width: 36px;
   height: 36px;
-  background-color: #fff;
-  border-radius: 50%;
-  padding: 8px;
+  background-color:transparent;
+  /* border-radius: 50%; */
+  padding: auto;
   box-shadow: 0 0 5px rgba(0,0,0,0.2);
 }
 
