--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,7 +36,7 @@ body{
 .nav-links a {
   text-decoration: none;
   color: #3a1f1f; /* marrom escuro */
-  font-size: 25px;
+  font-size: 23px;
   font-weight: 500;
 }
 
@@ -44,19 +44,20 @@ body{
   margin: 0 auto;
   position: relative;
   width: 100%;
-  height: 400px;
+  height: 600px; /*Aumentei a altura para ver como ficava em tela maior*/
   overflow:hidden;
   width: 100%;
   display: flex;
   justify-content:center;
+  z-index: -1;
 }
 
 .slides{
   width: 100%;
-  height: 400px;
+  height: 600px; /*Aumentei a altura para ver como ficava em uma tela maior*/
   display: flex;
   transition: transform 0.5s ease-in-out;
-
+  z-index: -1; /*estava tapamdo o menu do dropdown*/
 }
 
 .slide img{
@@ -323,7 +324,7 @@ footer {
   background-color: #FFBBB5;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: 1000;
   text-align: center;
 }
 
