--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,20 +44,20 @@ body{
   margin: 0 auto;
   position: relative;
   width: 100%;
-  height: 600px; /*Aumentei a altura para ver como ficava em tela maior*/
+  height: 400px; 
   overflow:hidden;
   width: 100%;
   display: flex;
   justify-content:center;
-  z-index: -1;
+  pointer-events: none;
 }
 
 .slides{
   width: 100%;
-  height: 600px; /*Aumentei a altura para ver como ficava em uma tela maior*/
+  height: 400px; 
   display: flex;
   transition: transform 0.5s ease-in-out;
-  z-index: -1; /*estava tapamdo o menu do dropdown*/
+  z-index: -1; 
 }
 
 .slide img{
@@ -80,9 +80,10 @@ button.prev, button.next {
   font-size: 4rem;
   padding: 0.5rem 1rem;
   cursor: pointer;
-  z-index: 10;
+  z-index: 11;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* sombra */
   /*-webkit-text-stroke: 1px rgb(255, 253, 253) borda na seta */
+   pointer-events: auto;
 }
 
 button.prev { left: 10px; }
@@ -320,11 +321,11 @@ footer {
 
 .dropdown-content {
   display: none; 
-  position: absolute;
+ position: absolute;
+  z-index: 10;
   background-color: #FFBBB5;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1000;
   text-align: center;
 }
 
@@ -342,4 +343,5 @@ footer {
 
 .dropdown-content.show {
   display: block; 
+  z-index: 11;
 }
