--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,6 +1,6 @@
-.header-mobile{
-    display: none;
-}
+.menu-responsivo{
+  display: none;
+ } 
 
 /* Para o slider */
 @media (max-width: 768px) {
@@ -29,4 +29,75 @@
     margin: 0 40px;
    
   }
+}
+
+@media (max-width: 820px){
+
+ .menu-responsivo{
+  display: block;
+ } 
+
+  header.navbar{
+    display: none;
+  }
+    header nav {
+        display: none; 
+      }
+
+      .menu-responsivo {
+        display: block;
+        background-color: #FFBBB5;
+        width: 100%;
+        position: fixed;
+        top: 0;
+      }
+
+      .separando-logos{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      .menu {
+        font-size: 40px;
+        color: white;
+        cursor: pointer;
+        margin: 20px 30px;
+      }
+
+      .logo-responsivo{
+        font-size: 40px;
+        margin: 20px 30px;
+        font-weight: 700;
+        color: #fff;
+      }
+      .navegacao-responsivo {
+        display: none;
+        flex-direction: column;
+        gap: 10px;
+        background-color: #FFBBB5;
+        padding: 0px 90px;
+        margin: 0px 20px;
+        border-radius: 0px 0px 14px 14px;
+        position: fixed;
+        right: 0;
+        left: 0;
+      }
+
+      .navegacao-responsivo ul {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        padding: 50px;
+        border-radius: 10px;
+      }
+    
+      .navegacao-responsivo.ativo {
+        display: block;
+        z-index: 11;
+      }
+
+      button.prev, button.next {
+        z-index: 1;
+      }
 }
