--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -33,23 +33,25 @@
 
 @media (max-width: 820px){
 
- .menu-responsivo{
-  display: block;
- } 
+    .menu-responsivo{
+      display: block;
+    } 
 
-  header.navbar{
-    display: none;
-  }
+      header.navbar{
+        display: none;
+      }
     header nav {
         display: none; 
       }
 
       .menu-responsivo {
+        position: sticky;
         display: block;
         background-color: #FFBBB5;
         width: 100%;
         position: fixed;
         top: 0;
+        z-index: 100;
       }
 
       .separando-logos{
@@ -60,28 +62,27 @@
 
       .menu {
         font-size: 40px;
-        color: white;
+        color: #4F2819;
         cursor: pointer;
         margin: 20px 30px;
       }
 
       .logo-responsivo{
-        font-size: 40px;
         margin: 20px 30px;
-        font-weight: 700;
-        color: #fff;
       }
+
       .navegacao-responsivo {
         display: none;
         flex-direction: column;
+        text-align: center;
         gap: 10px;
         background-color: #FFBBB5;
         padding: 0px 90px;
-        margin: 0px 20px;
-        border-radius: 0px 0px 14px 14px;
+        margin: 0px auto;
         position: fixed;
         right: 0;
         left: 0;
+        z-index: 1000;
       }
 
       .navegacao-responsivo ul {
@@ -94,10 +95,12 @@
     
       .navegacao-responsivo.ativo {
         display: block;
-        z-index: 11;
+        z-index: 1000;
       }
 
       button.prev, button.next {
-        z-index: 1;
+        text-shadow: 0px;
+        position: relative;
+        z-index: -11;
       }
 }
