--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -47,9 +47,9 @@
       .menu-responsivo {
         position: sticky;
         display: block;
+        min-height: 90px;
         background-color: #FFBBB5;
         width: 100%;
-        position: fixed;
         top: 0;
         z-index: 100;
       }
@@ -74,15 +74,41 @@
       .navegacao-responsivo {
         display: none;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
         text-align: center;
         gap: 10px;
-        background-color: #FFBBB5;
-        padding: 0px 90px;
+        background-color: #ffbbb5d9;
+        padding: 0px 80px;
         margin: 0px auto;
-        position: fixed;
+        position: sticky;
         right: 0;
         left: 0;
         z-index: 1000;
+      }
+
+       .navegacao-responsivo a {
+          text-decoration: none;
+          color: #3a1f1f;
+          font-size: 20px;
+          font-weight: 500;
+          text-align: center;
+      }
+
+      button.dropbtn:hover, .navegacao-responsivo a:hover{
+        color: #873718;
+      }
+
+
+      button.dropbtn{
+          color: #3a1f1f;
+          font-size: 20px;
+          font-weight: 500;
+          background-color: #FFBBB5;
+          padding: 5px;
+          border: none;
+          cursor: pointer;
+          text-align: center;
       }
 
       .navegacao-responsivo ul {
@@ -94,7 +120,7 @@
       }
     
       .navegacao-responsivo.ativo {
-        display: block;
+        display: flex;
         z-index: 1000;
       }
 
