--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -85,6 +85,7 @@
         right: 0;
         left: 0;
         z-index: 1000;
+        border-top: #f69890 solid 2px;
       }
 
        .navegacao-responsivo a {
@@ -129,4 +130,10 @@
         position: relative;
         z-index: -11;
       }
+
+      .produtos{
+        margin:10px;
+   
+      }
+
 }
