--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,15 +1,15 @@
-body{
+body {
   margin: 0;
   padding: 0;
   font-family: 'ABeeZee', sans-serif;
   font-weight: 100;
-  background-color:  #f2d8d7;
+  background-color: #f2d8d7;
   /*#f2d8d7 outra opção de cor de fundo
   a que tava #FFF2F1*/
 }
 
 .navbar {
-  background-color: #FFBBB5; 
+  background-color: #FFBBB5;
   color: #4F2819;
   padding: 1px 20px;
   display: flex;
@@ -20,8 +20,8 @@ body{
 }
 
 .logo img {
-   width: 100px;
-   height: auto;
+  width: 100px;
+  height: auto;
 }
 
 .nav-links ul {
@@ -42,43 +42,44 @@ body{
   font-weight: 500;
 }
 
-button.dropbtn:hover, .nav-links a:hover{
+button.dropbtn:hover,
+.nav-links a:hover {
   color: #682b13;
 }
 
 
-button.dropbtn{
-    color: #3a1f1f;
-    font-size: 24px;
-    font-weight: 500;
-    background-color: #FFBBB5;
-    padding: 5px;
-    border: none;
-    cursor: pointer;
+button.dropbtn {
+  color: #3a1f1f;
+  font-size: 24px;
+  font-weight: 500;
+  background-color: #FFBBB5;
+  padding: 5px;
+  border: none;
+  cursor: pointer;
 }
 
- .slider{
+.slider {
   margin: 0 auto;
   position: relative;
   width: 100%;
-  height: 400px; 
-  overflow:hidden;
+  height: 400px;
+  overflow: hidden;
   width: 100%;
   display: flex;
-  justify-content:center;
+  justify-content: center;
   pointer-events: none;
 }
 
-.slides{
+.slides {
   width: 100%;
-  height: 400px; 
+  height: 400px;
   display: flex;
   transition: transform 0.5s ease-in-out;
-  z-index: -1; 
+  z-index: -1;
 }
 
-.slide img{
- width: 100%;
+.slide img {
+  width: 100%;
 }
 
 .slide {
@@ -87,7 +88,8 @@ button.dropbtn{
   transition: opacity 0.5s;
 }
 
-button.prev, button.next {
+button.prev,
+button.next {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -100,26 +102,32 @@ button.prev, button.next {
   z-index: 11;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   /*-webkit-text-stroke: 1px rgb(255, 253, 253) borda na seta */
-   pointer-events: auto;
+  pointer-events: auto;
 }
 
-button.prev { left: 10px; }
-button.next { right: 10px; }
+button.prev {
+  left: 10px;
+}
+
+button.next {
+  right: 10px;
+}
 
 .texto-apresentacao {
   margin: 0 auto;
   padding: 0;
-  line-height: 1.8; 
+  line-height: 1.8;
 }
 
 .texto-apresentacao h2 {
   margin: 0 auto;
-  padding: 0; 
+  padding: 0;
   color: #4f2819;
 }
+
 .texto-apresentacao p {
   padding: 0 40px;
-  top:0;
+  top: 0;
 }
 
 .mais-vendidos {
@@ -131,15 +139,15 @@ button.next { right: 10px; }
 
 .mais-vendidos h1 {
   margin: 0 auto;
-  padding: 0; 
+  padding: 0;
   color: #4f2819;
 }
 
 .produtos-grid {
-  display:flex;
+  display: flex;
   flex-wrap: wrap;
   gap: 1px;
-  object-fit:contain;
+  object-fit: contain;
   padding: 0 1rem;
   justify-content: center;
   align-items: center;
@@ -151,7 +159,7 @@ button.next { right: 10px; }
   position: relative;
   overflow: hidden;
   border-radius: 5px;
-  box-shadow: 20px 20px 20px rgba(0,0,0,0.1);
+  box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.1);
   cursor: pointer;
 }
 
@@ -191,6 +199,7 @@ button.next { right: 10px; }
 }
 
 h1 {
+  margin: 15px;
   color: #4F2819;
   text-align: center;
   font-size: 45px;
@@ -202,26 +211,35 @@ h2 {
   font-size: 45px;
 }
 
+h3 {
+  color: #4F2819;
+  text-align: center;
+  font-size: 45px;
+}
+
 a {
-  text-decoration: none; 
-  color: inherit;       
+  text-decoration: none;
+  color: inherit;
 }
 
 p {
   text-align: center;
+
 }
 
 text {
   font-family: 'Arial', sans-serif;
   color: #4F2819;
   display: center;
-  justify-content: center;  /* horizontal */
-  align-items: center;      /* vertical */
-  height:auto;
+  justify-content: center;
+  /* horizontal */
+  align-items: center;
+  /* vertical */
+  height: auto;
   margin: 5px;
   padding: 0 30px;
-  
-  
+
+
 }
 
 ul {
@@ -230,28 +248,6 @@ ul {
   margin: 0;
 }
 
-table {
-  border: 1px solid;
-  border-collapse: collapse;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 30px;
-  text-align: center;
-  width: 60%;
-}
-
-
-th, td {
- padding: 8px;
- margin: 10px;
- border-left: 1px solid;
- border-left: 1px solid;
-}
-
-th{
-  font-size: 20px;
-
-}
 
 footer {
   background-color: #4F2819;
@@ -278,7 +274,8 @@ footer {
   max-width: 150px;
 }
 
-.footer-section, .footer-location {
+.footer-section,
+.footer-location {
   max-width: 250px;
   pad: 0;
 }
@@ -289,7 +286,7 @@ footer {
   font-size: 16px;
 }
 
-.footer-section p, 
+.footer-section p,
 .footer-location p {
   margin: 4px 0;
   font-size: 14px;
@@ -315,12 +312,11 @@ footer {
 .footer-social img {
   width: 36px;
   height: 36px;
-  background-color:transparent;
+  background-color: transparent;
   /* border-radius: 50%; */
   padding: auto;
-  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
-
 
 
 .dropdown {
@@ -329,12 +325,12 @@ footer {
 }
 
 .dropdown-content {
-  display: none; 
- position: absolute;
+  display: none;
+  position: absolute;
   z-index: 10;
   background-color: #FFBBB5;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   text-align: center;
 }
 
@@ -347,6 +343,229 @@ footer {
 }
 
 .dropdown-content.show {
-  display: block; 
+  display: block;
   z-index: 11;
+}
+
+
+.sobre {
+  margin-top: 70px;
+}
+
+.cont-sobre {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 50px;
+  text-align: justify;
+  column-gap: 100px;
+  flex-wrap: wrap; /* permite quebra de linha */
+}
+
+div img {
+  border-radius: 30px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+  max-width: 100%; 
+  height: auto; 
+}
+
+.text-sobre {
+  display: flex;
+  flex-direction: column;
+  margin-left: 80px;
+  padding: 10px;
+  width: 50%;
+  text-align: right;
+}
+
+@media (max-width: 768px) {
+  .cont-sobre {
+    flex-direction: column;
+    align-items: center;
+    margin-right: 0;
+    column-gap: 0;
+  }
+
+  .text-sobre {
+    width: 90%;
+    margin-left: 0;
+    text-align: center;
+  }
+}
+
+
+ 
+  table {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 40px;
+  text-align: center;
+  width: 60%;
+  font-size: 19px
+  }
+
+
+
+th, td {
+  padding: 8px;
+  margin: 10px;
+
+}
+
+th {
+  font-size: 20px;
+
+}
+
+
+.img {
+  display: flex;
+  justify-content: center; 
+  gap: 40px; 
+  flex-wrap: wrap; 
+  margin: 20px;
+}
+
+@media (max-width: 768px) {
+    .galeria-imagens img {
+        flex-basis: calc(50% - 15px); 
+    }
+}
+
+@media (max-width: 480px) {
+  galeria-imagens img {
+        flex-basis: 100%;
+}
+    }
+
+
+.formulario {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 20px;
+  margin-top: 20px;
+  gap: 20px;
+}
+
+.form1,
+.form2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-basis: calc(50% - 10px);
+  min-width: 300px;
+  box-sizing: border-box;
+  border: 3px solid rgb(80, 39, 46);
+  border-radius: 40px;
+}
+
+.form1 h2,
+.form2 h2 {
+  margin-bottom: 25px;
+  margin-top: 25px;
+}
+
+ .texto{
+margin: 20px 0 20px 20px;
+font-size: 17px;
+}
+
+.mapa {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30px 30px 30px 70px;
+
+}
+
+@media (max-width: 768px) {
+  .form1,
+  .form2 {
+    flex-basis: 100%;
+  }
+}
+
+.form1 input[type="text"],
+.form1 input[type="tel"],
+.form1 input[type="email"],
+.form1 input[type="file"],
+.form2 input[type="text"],
+.form2 input[type="tel"],
+.form2 input[type="email"],
+.form2 input[type="file"] {
+  width: 100%;
+  max-width: 300px;
+  margin-bottom: 10px;
+  padding: 8px;
+  border: none;
+ background-color: transparent;
+ border-bottom: 2px solid #4d2323
+ 
+}
+.form1 input[type="submit"],
+    .form2 input[type="submit"] 
+      
+    {
+width: 100%;
+  max-width: 300px;
+  margin-bottom: 10px;
+  padding: 8px;
+ 
+    }
+
+
+    .contato-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  margin: 40px 0;
+  flex-wrap: wrap;
+}
+
+.icone-contato {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-weight: bold;
+}
+
+.icone-bg {
+  background-color: #8B0000; /* vinho escuro */
+  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.icone-bg img {
+  width: 30px;
+  height: 30px;
+}
+
+/* Responsivo para telas menores */
+@media (max-width: 600px) {
+  .contato-icons {
+    gap: 20px;
+  }
+
+  .icone-bg {
+    width: 60px;
+    height: 60px;
+  }
+
+  .icone-bg img {
+    width: 25px;
+    height: 25px;
+  }
+
+  .icone-contato p {
+    font-size: 14px;
+    text-align: center;
+  }
 }
