--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   font-family: 'ABeeZee', sans-serif;
   font-weight: 100;
-  background-color: #f2d8d7;
+  background-color: #FFF2F1;
   /*#f2d8d7 outra opção de cor de fundo
   a que tava #FFF2F1*/
 }
