--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -348,8 +348,16 @@ footer {
 }
 
 
+
+
+
+
+
 .sobre {
   margin-top: 70px;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
 }
 
 .cont-sobre {
@@ -359,84 +367,99 @@ footer {
   margin-right: 50px;
   text-align: justify;
   column-gap: 100px;
-  flex-wrap: wrap; /* permite quebra de linha */
+  margin: 10px;
+ 
 }
 
 div img {
   border-radius: 30px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
   max-width: 100%; 
-  height: auto; 
+  
 }
 
 .text-sobre {
   display: flex;
   flex-direction: column;
   margin-left: 80px;
-  padding: 10px;
   width: 50%;
-  text-align: right;
+  
 }
 
+
+
+
+/* --- Responsividade para telas menores que 768px (celulares e tablets) --- */
 @media (max-width: 768px) {
   .cont-sobre {
-    flex-direction: column;
-    align-items: center;
+    flex-direction: column; /* coloca a imagem e o texto um abaixo do outro */
     margin-right: 0;
     column-gap: 0;
+    align-items: center;
+    text-align: center;
   }
 
   .text-sobre {
-    width: 90%;
+    width: 100%;
     margin-left: 0;
     text-align: center;
   }
+
+  div img {
+    max-width: 90%;
+    margin-bottom: 20px;
+    justify-content: center;
+    align-items: center;
+  }
 }
+
 
 
  
-  table {
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 40px;
+  .curiosidade {
   text-align: center;
-  width: 60%;
-  font-size: 19px
-  }
-
-
-
-th, td {
-  padding: 8px;
-  margin: 10px;
-
+  padding: 40px 20px;
 }
 
-th {
-  font-size: 20px;
-
-}
-
-
-.img {
+.colunas-curiosidades {
   display: flex;
-  justify-content: center; 
-  gap: 40px; 
-  flex-wrap: wrap; 
-  margin: 20px;
+  justify-content: center; /* Centraliza horizontalmente */
+  align-items: flex-start;
+  gap: 40px;
+  margin-top: 20px;
+  flex-wrap: wrap;
+  max-width: 1000px; /* Largura máxima da área das colunas */
+  margin-left: auto;
+  margin-right: auto; /* Centraliza o container na tela */
 }
 
-@media (max-width: 768px) {
-    .galeria-imagens img {
-        flex-basis: calc(50% - 15px); 
-    }
+.colunas-curiosidades > div {
+  flex: 1;
+  max-width: 45%;
+  text-align: left; /* Para manter os textos alinhados à esquerda */
 }
 
-@media (max-width: 480px) {
-  galeria-imagens img {
-        flex-basis: 100%;
+.colunas-curiosidades img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  margin-bottom: 10px;
 }
-    }
+
+.colunas-curiosidades ul {
+  list-style: none;
+  padding-left: 20px;
+  text-align: center;
+}
+
+.titulo{
+  font-size: 25px;
+  margin-bottom: 10px;
+  color: #3a1f1f;
+  font-weight: 900;
+}
+
+
 
 
 .formulario {
