--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -79,7 +79,7 @@
         text-align: center;
         gap: 10px;
         background-color: #ffbbb5d9;
-        padding: 0px 80px;
+        padding: 0px ;
         margin: 0px auto;
         position: sticky;
         right: 0;
@@ -135,7 +135,89 @@
         margin:10px;
    
       }
+}
 
-    
+@media (max-width: 768px) {
+  .cont-sobre {
+    flex-direction: column;
+    align-items: center;
+    margin-right: 0;
+    column-gap: 0;
+  }
 
+  .text-sobre {
+    width: 90%;
+    margin-left: 0;
+    text-align: center;
+  }
+}
+
+@media (max-width: 768px) {
+    .galeria-imagens img {
+        flex-basis: calc(50% - 15px); 
+    }
+}
+
+@media (max-width: 480px) {
+  galeria-imagens img {
+        flex-basis: 100%;
+}
+
+}
+
+@media (max-width: 768px) {
+  .form1,
+  .form2 {
+    flex-basis: 100%;
+  }
+}
+
+/* Responsivo para telas menores */
+@media (max-width: 600px) {
+  .contato-icons {
+    gap: 20px;
+  }
+
+  .icone-bg {
+    width: 60px;
+    height: 60px;
+  }
+
+  .icone-bg img {
+    width: 25px;
+    height: 25px;
+  }
+
+  .icone-contato p {
+    font-size: 14px;
+    text-align: center;
+  }
+}
+
+/* Responsivo para telas médias */
+@media (max-width: 768px) {
+  .tabela-curiosidades {
+    padding: 0px;
+  }
+
+  .tabela-curiosidades table {
+    font-size: 0.9rem;
+  }
+
+  .tabela-curiosidades th,
+  .tabela-curiosidades td {
+    padding: 0px;
+  }
+}
+
+/* Responsivo para telas pequenas */
+@media (max-width: 480px) {
+  .tabela-curiosidades table {
+    font-size: 0.8rem;
+  }
+
+  .tabela-curiosidades th,
+  .tabela-curiosidades td {
+    padding: 0px;
+  }
 }
