--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -69,11 +69,6 @@
     font-size: 10px
   }
 
-.sobre-container{
-    margin: 0 10px
-    
-}
-
 
   .footer-container {
     font-size: 13px;
@@ -96,6 +91,8 @@
   .slide img {
     min-width: 500px;
     max-height: 400px;
+    height: 300px;
+    object-fit: cover;
   }
   .cont-sobre {
     flex-direction: column;
@@ -228,7 +225,7 @@
 
       button.dropbtn{
           color: #3a1f1f;
-          font-size: 20px;
+          /* font-size: 20px; */
           font-weight: 500;
           background-color: #FFBBB5;
           padding: 5px;
@@ -261,7 +258,7 @@
    
       }
       .exterior {
-        width: 50%;
+       min-width: 100%;
       }
 }
 
@@ -295,5 +292,10 @@
     font-size: 0.9rem;
     height: 45px;
   } 
+
+  .sobre-container {
+    margin: 0 2px;
+    padding: 5px;
+  }
 
 }
